--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,9 @@
       "dom"
     ],
     "types": [
-      "node"
+      "node",
+      "jest"
+      
     ]
   },
   "angularCompilerOptions": {
